# rusted-tasks

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  rtasks.json
.github/workflows/: rust.yml
src/: main.rs  task.rs  ui.rs
